--- a/trunk/alquilook/css/alquilook.css
+++ b/trunk/alquilook/css/alquilook.css
@@ -348,6 +348,13 @@ hr.grisdoble {
 	margin:3px;
 	}
 
+hr.formulario {
+	color:#c8c8c8;
+	background-color:#c8c8c8;
+	width:100%;
+	margin:10px;
+	}
+
 
 hr{
 	color: #FFFFFF;
