--- a/trunk/alquilook/css/alquilook.css
+++ b/trunk/alquilook/css/alquilook.css
@@ -522,7 +522,7 @@ body {
 
 .carousel-caption {
   position: absolute;
-  background-color:rgba(255,255,255,0.5);
+  background-color:#FFFFFF;
   width: 80%;
   padding: 0 10px;
   margin-top: 5%;
