--- a/alquilook/css/alquilook.css
+++ b/alquilook/css/alquilook.css
@@ -51,8 +51,8 @@ h6{
 
 h1.slider{
 	font-family: 'Lato', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
-	font-size:4em;
-	font-weight: 400; 
+	font-size:5em;
+	font-weight: 100; 
 	}
 	
 
@@ -279,6 +279,8 @@ body,html{
 	
 }
 
+
+
 p.mobiliario{
 	line-height:25px;
 }
@@ -443,7 +445,10 @@ body {
 
 
 .section-pie {
+	position:relative;
+	width:100%;
   padding: 30px 0;
+  bottom:0px;
 }  
 
 
@@ -522,8 +527,8 @@ body {
 
 .carousel-caption {
   position: absolute;
-  background-color:#FFFFFF;
   width: 80%;
+  color: #FFFFFF;
   padding: 0 10px;
   margin-top: 5%;
   top:1px;
@@ -584,7 +589,7 @@ p.ficha2{
 h1.slider{
 	font-family: 'Lato', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
 	font-size:2em;
-	font-weight: 400; 
+	font-weight: 100; 
 	}
 	
 h2.banner{
