--- a/alquilook/css/bootstrap.css
+++ b/alquilook/css/bootstrap.css
@@ -5562,20 +5562,15 @@ button.close {
 }
 .carousel-caption {
   position: absolute;
-  background-color:#FFFFFF;
-  width: 30%;
+  color: #FFFFFF;
+  width: 80%;
   padding: 0 10px;
   margin-top:3%;
   top:1px;
-  right: 60%;
+  right: 10%;
   left: 10%;
 }
 
-.carousel-caption h1 {
-  color:#000000;
-  opacity:1;
-  filter:alpha(opacity=100);
-}
 
 .carousel-caption .btn {
   text-shadow: none;
