--- a/alquilook/css/alquilook.css
+++ b/alquilook/css/alquilook.css
@@ -75,6 +75,11 @@ h5.banner{
 	font-size:1.5em;
 	font-weight: 400;
 	}
+	
+p{
+	font-size:16px;
+
+}	
 
 .footer{
 	color:#FFF;
@@ -373,13 +378,12 @@ hr{
 	width: 50%;
 }
 
-html, body {
-  height: 100%;
-}
+
 
 body {
   padding-top: 100px;
   font-family:'Lato', "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-size: 14px;
 }
 
 .logo{
@@ -552,7 +556,7 @@ p.ficha{
 	text-align:left;
 	font-family: 'Lato', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
 	font-size:0.8em;
-	line-height:12px;
+	line-height:14px;
 	text-transform:none;
 	font-weight: 400;
 }		
@@ -561,7 +565,7 @@ p.ficha2{
 	text-align:left;
 	font-family: 'Lato', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
 	font-size:0.8em;
-	line-height:12px;
+	line-height:14px;
 	text-transform:none;
 	padding: 5px;
 	font-weight: 400;
@@ -577,11 +581,11 @@ p.ficha2{
 }
 
 .imagenbanner2{
-	width: 40px;
+	width: 45px;
 }
 
 .imagenboton{
-	width: 55px;
+	width: 45px;
 }
 
 .imagenboton2{
@@ -595,62 +599,62 @@ p.ficha2{
 
 h1.slider{
 	font-family: 'Lato', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
-	font-size:2em;
+	font-size:30px;
 	font-weight: 100; 
 	}
 	
 h2.banner{
 	color:#FFFFFF;
 	font-family: 'Lato', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
-	font-size:1.3em;	
+	font-size:20px;	
 	font-weight: 400;
 	}
   
 h3.banner{
 	color:#FFFFFF;
 	font-family: 'Roboto Slab',"Trebuchet MS", Arial, Helvetica, sans-serif !important;
-	font-size:1.3em;
+	font-size:18px;
 	}
 	
 h5.banner{
 	color:#FFFFFF;
 	font-family: 'Lato', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
-	font-size:1.2em;
+	font-size:14px;
 	font-weight: 400;
 	}  
   
   
 h1{
 	font-family:  'Lato', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
-	font-size:2.1em;
+	font-size:30px;
 	font-weight: 400;	
 	}
 	
 h2{
 	font-family:  'Lato', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
-	font-size:1.5em;
+	font-size:20px;
 	font-weight: 400;	
 	}
 	
 h3{
 	font-family: 'Roboto Slab',"Trebuchet MS", Arial, Helvetica, sans-serif !important;
-	font-size:1.3em;
+	font-size:18px;
 	}
 	
 h4{
 	font-family:  'Roboto Slab',"Trebuchet MS", Arial, Helvetica, sans-serif !important;
-	font-size:1em;
+	font-size:18px;
 	}	
 	
 h5{
 	font-family:'Lato',  "Trebuchet MS", Arial, Helvetica, sans-serif !important;
-	font-size:1em;
+	font-size:14px;
 	font-weight: 400;
 	}	
 	
 h6{
 	font-family:'Lato', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
-	font-size:0.7em;
+	font-size:14px;
 	font-weight: 400;
 	}	
 
