--- a/alquilook/css/bootstrap.css
+++ b/alquilook/css/bootstrap.css
@@ -316,7 +316,7 @@ img {
   height: auto;
 }
 .img-rounded {
-  border-radius: 6px;
+  border-radius: 0;
 }
 .img-thumbnail {
   display: inline-block;
