--- a/trunk/alquilook/css/bootstrap.css
+++ b/trunk/alquilook/css/bootstrap.css
@@ -3477,7 +3477,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav > li > a:hover,
 .nav > li > a:focus {
-	color:#d15627;
+	color:#ef501e;
   text-decoration: none;
 }
 .nav > li.disabled > a {
