--- a/trunk/alquilook/css/alquilook.css
+++ b/trunk/alquilook/css/alquilook.css
@@ -438,10 +438,15 @@ body {
 
 .fondogris{
 	background-color: #f5f5f5;
-	padding:10px;
-	border-bottom: 10px solid #FFFFFF; 
+	padding:15px;
+	border-bottom: 15px solid #FFFFFF; 
 }
 
+.fondoblanco{
+	background-color: #FFFFFF;
+	padding:15px;
+	border-bottom: 15px solid #f5f5f5; 
+}
 .tab-pane {
   margin-top: 10px;
   color:#FFFFFF;
